--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             <section class="team-work" id="team-work">
                 <!-- Work items will be dynamically inserted here -->
             </section>
+            
+            <section class="team-members" id="team-members">
+                <h2 class="section-title">Team Members</h2>
+                <div class="team-members-grid">
+                    <!-- Team members will be dynamically inserted here -->
+                </div>
+            </section>
         </div>
     </main>
 
