--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Background Ethereum logos -->
+    <div class="eth-bg-logo"></div>
+    <div class="eth-bg-logo"></div>
+    <div class="eth-bg-logo"></div>
+    <div class="eth-bg-logo"></div>
+    <div class="eth-bg-logo"></div>
+    
     <header>
         <div class="container">
             <h1>Protocol Prototyping</h1>
